--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "use-sound": "^5.0.0"
   },
   "devDependencies": {
