--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "daisyui": "^5.1.8",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.2",
     "use-sound": "^5.0.0",
     "zustand": "^5.0.8"
